--- a/app/src/main/res/layout/row_notifications.xml
+++ b/app/src/main/res/layout/row_notifications.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -10,53 +10,91 @@
         <import type="android.view.View" />
 
         <variable
-                name="position"
-                type="Integer" />
+            name="position"
+            type="Integer" />
 
         <variable
-                name="data"
-                type="com.transport.mall.model.NotificationModel" />
+            name="data"
+            type="com.transport.mall.model.NotificationModel" />
 
         <variable
-                name="selectedPosition"
-                type="java.lang.Boolean" />
+            name="selectedPosition"
+            type="java.lang.Boolean" />
 
         <variable
-                name="context"
-                type="android.content.Context" />
+            name="context"
+            type="android.content.Context" />
 
     </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:elevation="@dimen/_3sdp"
         app:cardBackgroundColor="@color/white">
 
-    <LinearLayout
+        <LinearLayout
             android:id="@+id/containerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:padding="@dimen/_10sdp"
             android:orientation="horizontal">
 
-        <androidx.appcompat.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
+                imageResource="@{data.icon}"
                 android:layout_width="@dimen/_35sdp"
                 android:layout_height="@dimen/_35sdp"
-                android:padding="@dimen/_7sdp"
-                imageResource="@{R.drawable.ic_notification}" />
+                android:src="@drawable/ic_message" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvMenuTitle"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="@dimen/_10sdp"
-                android:text="@{data.title}"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp"
-                tools:text="Dhaba List" />
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvSender"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:paddingHorizontal="@dimen/_10sdp"
+                        android:text="@{data.sender}"
+                        android:textColor="@color/grey"
+                        android:textSize="@dimen/_14ssp"
+                        tools:text="Sender" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvDateTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:paddingHorizontal="@dimen/_10sdp"
+                        android:text="@{data.dateTime}"
+                        android:textColor="@color/grey"
+                        android:textSize="@dimen/_14ssp"
+                        tools:text="Time" />
+
+                </LinearLayout>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvMenuTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingHorizontal="@dimen/_10sdp"
+                    android:text="@{data.title}"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_14ssp"
+                    tools:text="Dhaba List" />
+            </LinearLayout>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </layout>
