--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -10,56 +10,60 @@
         <import type="android.view.View" />
 
         <variable
-                name="list"
-                type="com.transport.mall.utils.common.recyclerviewbase.RecyclerBindingList" />
+            name="list"
+            type="com.transport.mall.utils.common.recyclerviewbase.RecyclerBindingList" />
 
         <variable
-                name="click"
-                type="com.transport.mall.utils.common.recyclerviewbase.RecyclerCallback" />
+            name="click"
+            type="com.transport.mall.utils.common.recyclerviewbase.RecyclerCallback" />
 
         <variable
-                name="toolbarModel"
-                type="com.transport.mall.model.Toolbar" />
+            name="toolbarModel"
+            type="com.transport.mall.model.Toolbar" />
+
+        <variable
+            name="userModel"
+            type="com.transport.mall.model.user.UserModel" />
 
     </data>
 
     <androidx.drawerlayout.widget.DrawerLayout
-            android:id="@+id/drawerLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:elevation="@dimen/_4sdp"
-                    android:minHeight="?attr/actionBarSize"
-                    app:contentInsetStart="0dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:elevation="@dimen/_4sdp"
+                android:minHeight="?attr/actionBarSize"
+                app:contentInsetStart="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="@dimen/_40sdp">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/_40sdp">
 
                     <TextView
-                            style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:layout_centerHorizontal="true"
-                            android:gravity="start"
-                            android:text="@{toolbarModel.title}"
-                            android:textColor="@color/black"
-                            tools:text="Title" />
+                        style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_centerHorizontal="true"
+                        android:gravity="start"
+                        android:text="@{toolbarModel.title}"
+                        android:textColor="@color/black"
+                        tools:text="Title" />
 
                 </RelativeLayout>
 
@@ -67,77 +71,80 @@
 
 
             <FrameLayout
-                    android:id="@+id/dashboardContainer"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/toolbar"
-                    tools:ignore="UselessLeaf" />
+                android:id="@+id/dashboardContainer"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                tools:ignore="UselessLeaf" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
-                android:id="@+id/left_drawer"
-                android:layout_width="@dimen/_250sdp"
-                android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:background="#FFFFFF"
-                android:choiceMode="singleChoice"
-                android:divider="@android:color/darker_gray"
-                android:dividerHeight="1dp"
-                android:orientation="vertical">
+            android:id="@+id/left_drawer"
+            android:layout_width="@dimen/_250sdp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="#FFFFFF"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/darker_gray"
+            android:dividerHeight="1dp"
+            android:orientation="vertical">
 
-            <include layout="@layout/view_side_profile" />
+            <include
+                android:id="@+id/user"
+                layout="@layout/view_side_profile"
+                app:userModel="@{userModel}" />
 
             <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:alpha="0.5"
-                    android:background="@color/divider" />
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:alpha="0.5"
+                android:background="@color/divider" />
 
             <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/sideMenuRecyclerV"
-                    itemDecor="@{true}"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:layout_margin="@dimen/_10sdp"
-                    app:layout="@{R.layout.row_side_menu}"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:onItemClickListener="@{click}"
-                    app:recyclerLinearAdapter="@{list}" />
+                android:id="@+id/sideMenuRecyclerV"
+                itemDecor="@{true}"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="@dimen/_10sdp"
+                android:layout_weight="1"
+                app:layout="@{R.layout.row_side_menu}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:onItemClickListener="@{click}"
+                app:recyclerLinearAdapter="@{list}" />
 
             <ImageView
-                    android:layout_width="@dimen/_70sdp"
-                    android:layout_height="@dimen/_50sdp"
-                    android:scaleType="fitCenter"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:src="@drawable/ic_logo_transport_mall" />
+                android:layout_width="@dimen/_70sdp"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_logo_transport_mall" />
 
             <LinearLayout
-                    android:layout_width="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:padding="@dimen/_10sdp"
+                    android:text="@string/privacy_policy"
+                    android:textSize="@dimen/_12ssp" />
 
                 <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/_12ssp"
-                        android:padding="@dimen/_10sdp"
-                        android:text="@string/privacy_policy" />
-
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/_12ssp"
-                        android:padding="@dimen/_10sdp"
-                        android:text="@string/terms_and_conditions" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_10sdp"
+                    android:text="@string/terms_and_conditions"
+                    android:textSize="@dimen/_12ssp" />
 
             </LinearLayout>
 
