--- a/app/src/main/res/layout/fragment_language_selection.xml
+++ b/app/src/main/res/layout/fragment_language_selection.xml
@@ -40,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginVertical="20dp"
-                android:src="@drawable/ic_app_icon" />
+                android:src="@drawable/ic_launcher" />
 
         <TextView
                 android:layout_width="wrap_content"
