--- a/app/src/main/res/layout/view_side_profile.xml
+++ b/app/src/main/res/layout/view_side_profile.xml
@@ -1,47 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <import type="com.transport.mall.R" />
+
+        <import type="android.view.View" />
+
+        <variable
+            name="userModel"
+            type="com.transport.mall.model.user.UserModel" />
+
+    </data>
 
     <FrameLayout
-            android:layout_width="match_parent"
-            android:background="@color/white"
-            android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_100sdp"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:padding="@dimen/_10sdp">
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_100sdp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/_10sdp">
 
             <com.transport.mall.utils.custom.CircleImageView
-                    android:id="@+id/imProfile"
-                    android:layout_width="@dimen/_60sdp"
-                    android:layout_height="@dimen/_60sdp"
-                    android:layout_marginEnd="10dp"
-                    app:srcCompat="@drawable/demo_profile_pic" />
+                android:id="@+id/imProfile"
+                android:layout_width="@dimen/_60sdp"
+                android:layout_height="@dimen/_60sdp"
+                android:layout_marginEnd="10dp"
+                app:srcCompat="@drawable/ic_profile_pic_placeholder" />
 
             <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical">
 
                 <TextView
-                        android:id="@+id/tvProfileName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="John Smith"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/_14ssp"
-                        tools:text="Profile Name" />
+                    android:id="@+id/tvProfileName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{userModel.fname.en}"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_14ssp"
+                    tools:text="Profile Name" />
 
                 <ImageView
-                        android:id="@+id/ivEdit"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:padding="5dp"
-                        android:src="@drawable/ic_edit" />
+                    android:id="@+id/ivEdit"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/default_btn_selector"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_edit" />
 
             </LinearLayout>
         </LinearLayout>
