getCities Api, room db

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,7 @@
 
         <variable
             name="userModel"
-            type="com.transport.mall.model.user.UserModel" />
+            type="com.transport.mall.model.UserModel" />
 
     </data>
 
