--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="userData"
-            type="com.transport.mall.model.user.UserModel" />
+            type="com.transport.mall.model.UserModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
