--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,88 +9,104 @@
         <import type="android.view.View" />
 
         <variable
-                name="list"
-                type="com.transport.mall.utils.common.recyclerviewbase.RecyclerBindingList" />
+            name="list"
+            type="com.transport.mall.utils.common.recyclerviewbase.RecyclerBindingList" />
 
         <variable
-                name="click"
-                type="com.transport.mall.utils.common.recyclerviewbase.RecyclerCallback" />
+            name="click"
+            type="com.transport.mall.utils.common.recyclerviewbase.RecyclerCallback" />
 
         <variable
-                name="toolbarModel"
-                type="com.transport.mall.model.Toolbar" />
+            name="toolbarModel"
+            type="com.transport.mall.model.Toolbar" />
+
+        <variable
+            name="viewModel"
+            type="com.transport.mall.ui.home.HomeVM" />
 
     </data>
 
-    <LinearLayout
-            android:id="@+id/parent"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="10dp">
 
-            <TextView
+                <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Dhaba Management"
-                    android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12ssp" />
 
-            <TextView
+                <TextView
                     android:id="@+id/tvAddNew"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Add New"
-                    android:textAllCaps="false"
-                    android:textSize="@dimen/_12ssp"
+                    android:background="@drawable/primary_color_btn_selector"
                     android:paddingHorizontal="15dp"
                     android:paddingVertical="5dp"
+                    android:text="Add New"
+                    android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:background="@drawable/primary_color_btn_selector" />
+                    android:textSize="@dimen/_12ssp" />
 
-        </LinearLayout>
+            </LinearLayout>
 
-        <com.google.android.material.tabs.TabLayout
+            <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
-                app:tabTextColor="@color/tabs_text_selector"
-                android:background="@color/white">
+                app:tabTextColor="@color/tabs_text_selector">
 
-            <com.google.android.material.tabs.TabItem
-                    android:layout_height="wrap_content"
+                <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/pending" />
 
-            <com.google.android.material.tabs.TabItem
-                    android:layout_height="wrap_content"
+                <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/in_progress" />
 
-            <com.google.android.material.tabs.TabItem
-                    android:layout_height="wrap_content"
+                <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/active" />
 
-            <com.google.android.material.tabs.TabItem
-                    android:layout_height="wrap_content"
+                <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/inactive" />
 
-        </com.google.android.material.tabs.TabLayout>
+            </com.google.android.material.tabs.TabLayout>
 
-        <androidx.viewpager.widget.ViewPager
+            <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-    </LinearLayout>
+        </LinearLayout>
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="@{viewModel.progressObserver.booleanValue() ? View.VISIBLE : View.GONE}" />
+
+    </FrameLayout>
 </layout>
