--- a/app/src/main/res/layout/view_side_profile.xml
+++ b/app/src/main/res/layout/view_side_profile.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="userModel"
-            type="com.transport.mall.model.user.UserModel" />
+            type="com.transport.mall.model.UserModel" />
 
     </data>
 
